# omcipcap

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: mib_after.pcap  mib_before.pcap  mib_omcc_96.pcap  mib_omcc_a0.pcap  mib_vendor_v1.pcap  mib_vendor_v2.pcap  omcicheck_example.pcap  vendor_355.json
omci/: cli.py  omci.py  omcimib.py
tests/: generate_omcicheck_example.py  generate_omcidiff_example.py  test_omci_exceptions.py
