[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omcipcap"
dynamic = ["version"]
readme = "README.md"
description = "OMCI analysis and MIB diff tools"
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.5.0",
    "rich>=13.0.0",
]
license = {text = "MIT"}
authors = [
    {name = "Dong Yuan Shih", email = "daneshih1125@gmail.com"}
]

[project.urls]
"Homepage" = "https://github.com/daneshih1125/omcipcap"
"Repository" = "https://github.com/daneshih1125/omcipcap"
"Bug Tracker" = "https://github.com/daneshih1125/omcipcap/issues"

[project.scripts]
omcipcap = "omci.cli:main"

[tool.setuptools.dynamic]
version = {attr = "omci.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["omci*"]
